Coverity analysis defect 116392: Uninitialized pointer field

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Execution Team 2020-10-19
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized pointer field

      The pointer field will point to an arbitrary memory location, any attempt to write may cause corruption. A pointer field is not initialized in the constructor
      /src/mongo/db/catalog/collection_catalog.h:114: UNINIT_CTOR 116392 Class member declaration for "_genNum".
      /src/mongo/db/catalog/collection_catalog.cpp:109: UNINIT_CTOR 116392 Non-static class member "_genNum" is not initialized in this constructor nor in any functions that it calls.
      /src/mongo/db/catalog/collection_catalog.h:117: UNINIT_CTOR 116392 Class member declaration for "_catalog".
      /src/mongo/db/catalog/collection_catalog.cpp:109: UNINIT_CTOR 116392 Non-static class member "_catalog" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Henrik Edin
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: