SERVER-51180 Fix uninitialized variables in CollectionCatalog::iterator when using constructor for end iterator.

They were basically harmless but would cause problem if iterators are compared other way around. This will make the comparison operator symmetric.